# unsloth_puzzles

./: LICENSE  README.md  pyproject.toml
amd_rocm/: amd_gpu_puzzles.ipynb  task_a_amd.py  task_b_amd.py  task_c_amd.py  task_e_amd.py
apple_silicon/: apple_silicon_puzzles.ipynb  task_a_apple_mlx.py  task_b_jax_sim.py  task_c_apple_mlx.py  task_e_apple_mps.py
nvidia_cuda/: Unsloth_Puzzles.ipynb  task_a_cuda.py  task_b_fsdp2.py  task_b_kaggle.ipynb  task_c_cuda.py  task_e.py  test_task_c.py
tpu_jax/: task_a_jax.py  task_b_jax.py  task_c_jax.py  task_e_jax.py  tpu_puzzles.ipynb
